# understanding

./: .gitignore  BottleAppDockerfile.debug  GenSimDockerFile.debug  LICENSE  README.md  conceptually.py  coref.py  corenlp.py  corenlp_parser.py  corenlp_server.py  distractors.py  docker-compose.yml  dockerfile  gen.py  gensim_client.py  gensim_server.py  index.tpl  main.py  ner_eval.py  pyproject.toml  readme.md  requirements.txt  run.py  setup.sh  squad-answers-extractor.py  ssplitter.py  start_corenlp.sh  understanding.py  utils.py  vachev-question-generation.py  wiki_paragraphs.py
NLP/: Dockerfile
data/: beyonce.txt  oxygen.txt  sample_input.txt  sample_input2.txt  sample_out.json  squad-train-tiny-v2.0.json  squad-train-trimmed-v2.1.json
src/: answers_stats.py  corenlp_coref.py  orchestrator.py  run.py  similarity.py  text_extractor.py  wiki_paragraphs.py
src/clients/: cli.py
src/models/: corenlp.py  gensim.py  ports.py
src/puppy/: puppy.py  typed_puppy.py
src/tools/: ner_eval.py
tests/puppy/: puppy_test.py
