[tool.poetry]
name = "q-gen"
version = "0.1.0"
description = ""
authors = ["Justice Ogbonna"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
gensim = "^4.0.1"
nltk = "^3.6.1"
fuzzywuzzy = "^0.18.0"
argparse = "^1.4.0"
python-Levenshtein = "^0.12.2"
requests = "^2.25.1"
pytest = "^6.2.3"
validators = "^0.18.2"
bottle = "^0.12.19"
wget = "^3.2"
textract = "^1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]